# SafeBox

./: .gitignore  README.md  flags.md  pyproject.toml
safebox/: __init__.py  __main__.py
safebox/cli/: app.py  run.py
safebox/config/: constants.py  settings.py
safebox/core/: container.py  docker_client.py  executor.py  timeout.py
safebox/detection/: detector.py  extension.py  shebang.py
safebox/output/: console.py  display.py  logger.py
safebox/utils/: env.py  files.py  validators.py
tests/fixtures/scripts/: hello.js  hello.py  hello.sh
